# core_test_win32

./: .gitmodules  CMakeLists.txt  mainwindow.cpp  mainwindow.h
